--- a/estate_workshop/views/view_summary_vehicle_status.xml
+++ b/estate_workshop/views/view_summary_vehicle_status.xml
@@ -189,6 +189,19 @@
                     <field name="total_day_breakdown" string="Breakdown"/>
                     <field name="total_day_standby" string="Standby"/>
                     <field name="total_downtime" string="Downtime"/>
+
+                    <filter name="filter_month" icon="terp-go-month" string="This Month"
+                            domain="[('month','&lt;=',(context_today()+relativedelta(day=31)).strftime('%%m')),
+                            ('month','&gt;=',(context_today()-relativedelta(day=1)).strftime('%%m'))]"/>
+
+                    <filter name="filter_year" icon="terp-go-year" string="This Year"
+                            domain="[('year_log_text','&lt;=',(context_today()+relativedelta(day=31, month=12)).strftime('%%Y')),
+                            ('year_log_text','&gt;=',(context_today()-relativedelta(day=1, month=1)).strftime('%%Y'))]"/>
+
+                    <filter icon="terp-go-month" string="Previous Month"
+                            domain="[('month','&lt;=',(context_today()+relativedelta(months=0,day=1,days=-1)).strftime('%m')),
+                            ('month','&gt;=',(context_today()+relativedelta(months=-1,day=1)).strftime('%m'))]"/>
+
                     <group expand="0" string="Group By">
                         <filter name="groupby_vehicle" context="{'group_by' : 'vehicle_id'}" string="Vehicle"/>
                         <filter name="groupby_year" context="{'group_by' : 'year_log_text'}" string="Year"/>
@@ -202,7 +215,7 @@
                 <field name="name">Vehicle Summary Available</field>
                 <field name="res_model">view.summary.vehicle.available</field>
                 <field name="view_mode">tree</field>
-                <field name="context">{"search_default_groupby_vehicle":True,"search_default_groupby_month":True,"search_default_groupby_year" : True}</field>
+                <field name="context">{"search_default_filter_month":True}</field>
         </record>
 
         <menuitem id="estate_summary_vehicle_available" name="Vehicle Summary Available"
